# afridial

./: README.md  pyproject.toml
src/validators/: zambia.json  zambia.py
tests/: test_zambia.py
